<resources>
    <string name="app_name">AxisForm</string>
    <string name="about_yourself">ABOUT YOURSELF</string>
    <string name="name">Name</string>
    <string name="hint_email">E-mail</string>
    <string name="contact_number">Contact Number (Land Line Number)</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="residence_hint">Residence Address</string>
    <string name="town_hint">Town / Village</string>
    <string name="district_hint">District</string>
    <string name="pincode_hint">Pincode</string>
    <string name="lok_sabha_hint">Lok Sabha</string>
    <string name="vidhan_sabha_hint">Vidhan Sabha</string>
    <string name="family_hint">Number of Family Members</string>
    <string name="next">NEXT</string>
</resources>
