<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.example.ayushdeothia.axisform.ui.activities.MainActivity">

        <include
            layout="@layout/horizontal_divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_yourself"
            android:textColor="@android:color/black"
            android:layout_marginBottom="@dimen/spacing_medium"/>

        <EditText
            android:layout_marginTop="@dimen/spacing_medium"
            android:id="@+id/name"
            style="@style/EditText"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/email"
            style="@style/EditText"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/contact_number"
            style="@style/EditText"
            android:hint="@string/contact_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/mobile_number"
            style="@style/EditText"
            android:hint="@string/mobile_number"
            android:inputType="number" />


        <Spinner
            android:id="@+id/gender"
            style="@style/Spinner" />

        <Spinner
            android:id="@+id/age"
            style="@style/Spinner" />

        <EditText
            android:gravity="start"
            android:id="@+id/residence"
            style="@style/EditText"
            android:hint="@string/residence_hint"
            android:minHeight="@dimen/height_text_box" />

        <EditText
            android:id="@+id/town"
            style="@style/EditText"
            android:hint="@string/town_hint" />

        <Spinner
            android:id="@+id/geography"
            style="@style/Spinner" />

        <Spinner
            android:id="@+id/state"
            style="@style/Spinner" />

        <EditText
            android:id="@+id/district"
            style="@style/EditText"
            android:hint="@string/district_hint" />

        <EditText
            android:id="@+id/pincode"
            style="@style/EditText"
            android:hint="@string/pincode_hint" />

        <EditText
            android:id="@+id/lok_sabha"
            style="@style/EditText"
            android:hint="@string/lok_sabha_hint" />

        <EditText
            android:id="@+id/vidhan_sabha"
            style="@style/EditText"
            android:hint="@string/vidhan_sabha_hint" />

        <Spinner
            android:id="@+id/income"
            style="@style/Spinner" />

        <EditText
            android:id="@+id/no_of_family"
            style="@style/EditText"
            android:hint="@string/family_hint" />

        <Spinner
            android:id="@+id/occupation"
            style="@style/Spinner" />

        <Spinner
            android:id="@+id/school"
            style="@style/Spinner" />

        <Spinner
            android:id="@+id/internet"
            style="@style/Spinner" />

        <Spinner
            android:id="@+id/monthly_recharge"
            style="@style/Spinner" />

        <Spinner
            android:id="@+id/whatsapp_usage"
            style="@style/Spinner" />

        <Spinner
            android:id="@+id/computer_usage"
            style="@style/Spinner" />

        <Spinner
            android:id="@+id/fb_account"
            style="@style/Spinner" />

        <Spinner
            android:id="@+id/hospital"
            style="@style/Spinner" />

        <Spinner
            android:id="@+id/vehicle"
            style="@style/Spinner" />

        <include layout="@layout/horizontal_divider"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_large"/>
    </LinearLayout>
</ScrollView>